[package]
name = "holani-gtk"
version = "0.9.4"
edition = "2021"

[dependencies]
gtk = { version = "0.9.4", package = "gtk4", features = ["v4_12"] }
holani = { git = "https://github.com/LLeny/holani.git", rev = "a2a802a" }
env_logger = { version = "0.11.5", default-features = false, features = [
  "auto-color",
  "humantime",
] }
log = { version = "0.4", features = [
  "max_level_trace",
  "release_max_level_warn",
] }
serde = { version = "1", features = ["derive"] }
kanal = { git = "https://github.com/fereidani/kanal.git", rev = "125fb7876797f20c632b25660c2f41c2908f9007" }
rodio = "0.20"
thread-priority = "1.1.0"
confy = "0.6.1"
strum = "0.26"
strum_macros = "0.26"
clap = { version = "4.5", features = ["derive"] }